--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
     "appcenter": "4.3.0",
     "appcenter-analytics": "4.3.0",
     "appcenter-crashes": "4.3.0",
     "react": "17.0.2",
-    "react-native": "0.66.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.8.0"
+    "react-native": "0.66.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
